attempt 3 to fix photos on mobile .blog

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -799,6 +799,12 @@ summary {
 		padding-left: 6rem;
 		padding-right: 6rem;
 	}
+
+	.blog-pic {
+		padding-left: 6rem;
+		padding-right: 6rem;
+	}
+
 }
 
 /******************************************
